fix(link): top align icons (#711)

--- a/projects/ng-aquila/src/link/link.component.scss
+++ b/projects/ng-aquila/src/link/link.component.scss
@@ -20,7 +20,7 @@
 
     &::ng-deep a {
         display: flex; // get icons aligned with text
-        align-items: center;
+        align-items: start; // align with the top
     }
 }
 
